Bug 3953 - uim-pref-gtk couldn't be executed if LIBUIM_VERBOSE is set
Summary: uim-pref-gtk couldn't be executed if LIBUIM_VERBOSE is set
Status: RESOLVED FIXED
Alias: None
Product: UIM
Classification: Unclassified
Component: helper: pref (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: high normal
Assignee: uim-bugs
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-08-03 00:59 UTC by TOKUNAGA Hiroyuki
Modified: 2005-08-04 19:58 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description TOKUNAGA Hiroyuki 2005-08-03 00:59:35 UTC
I don't know why, but it seems inifinite loop... I got following error messages....

>>(custom-group-desc (quote preedit))
>>(custom-group-desc (quote preedit))
>>(custom-group-desc (quote preedit))
>>(custom-group-desc (quote preedit))
>>(custom-group-desc (quote preedit))
>>(custom-group-desc (quote preedit))
.
.
.

Tested with latest trunk, rev1104.
Comment 1 TOKUNAGA Hiroyuki 2005-08-06 05:58:34 UTC
Fixed in revision 1126.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.