 r2777@t42 (orig r1126):  tkng | 2005-08-06 04:58:00 +0900  * scm/custom.scm: This commit will fix the bug #3953.    See https://bugs.freedesktop.org/show_bug.cgi?id=3953 for more details.   -(custom-group-label): Added a NULL check.   -(custom-group-desc):  Added a NULL check.

r2778@t42 (orig r1127):  tkng | 2005-08-06 05:04:08 +0900
 * scm/custom.scm:
  -(custom-group-label, custom-group-desc): Changed error messages a bit.
 
 * scm/im-custom.scm: Added a new custom group 'preedit'.
 
 r2780@t42 (orig r1129):  tkng | 2005-08-06 06:10:57 +0900
 * configure.ac: Generate uim.desktop automatically.
 
 * uim.desktop.in: New file.
 
 * uim.desktop: Removed because it's already automatically
   generated file.
 
 r2781@t42 (orig r1130):  tkng | 2005-08-06 09:52:24 +0900
 * scm/im-custom.scm:
  -(bridge-show-input-state-time-length): Described long description.
 
 r2782@t42 (orig r1131):  ekato | 2005-08-06 11:18:43 +0900
 * helper/helper-candwin-gtk.c : Sync with updated
   caret-state-indicator.
 (candidate_window_init) : Set cursor_location here.
 (candwin_move) : Move code for cursor_location handling into
   candidate_window_init().
 (caret_state_show) : Use timeout value.
 (caret_state_update) : New function to update position of the
   indicator.
 * xim/ximserver.cpp (InputContext::candidate_update) : Show
   candidate explicitly.
 (InputContext::update_prop_label) : Use timeout value.
 * xim/convdisp.cpp (class ConvdispOv) : Add update_caret_state
   member.
 (class ConvdispRw) : Ditto.
 (class ConvdispOs) : Ditto.
 (ConvdispRw::update_caret_state) : New.
 (ConvdispOv::update_caret_state) : Ditto.
 (ConvdispOs::update_caret_state) : Ditto.
 (ConvdispOv::update_icxatr) : Call update_caret_state().
 * xim/canddisp.cpp (Canddisp::show_caret_state) : Use timeout
   value.
 (Canddisp::update_caret_state) : New.
 * xim/canddisp.h (class Canddisp) : Add update_caret_state member.
 * xim/convdisp.h (class Convdisp) : Ditto.
 
 r2783@t42 (orig r1132):  tkng | 2005-08-06 14:04:17 +0900
 * helper/eggtrayicon.c: Added a function prototype to fix warning.
  -(egg_tray_icon_new_for_xscreen): The prototype of this function is added.
    But this function is not reffered from other file directory, maybe we 
    should mark this function static.
 
 r2784@t42 (orig r1133):  ekato | 2005-08-06 15:23:56 +0900
 * xim/canddisp.cpp (Canddisp::show_caret_state) : Terminate
   helper candwin message properly.
 
 r2785@t42 (orig r1134):  ekato | 2005-08-06 15:39:50 +0900
 * doc/HELPER-CANDWIN : Update.
 
 r2786@t42 (orig r1135):  yamamoto | 2005-08-06 15:49:01 +0900
  uim/Makefile.am: add setenv.c to uim_module_manager_SOURCES
 
 r2787@t42 (orig r1136):  yamamoto | 2005-08-06 15:54:49 +0900
  fep/uim-fep.c (my_forkpty) : unset ISTRIP flag of slave's termio
 
 r2788@t42 (orig r1137):  ekato | 2005-08-06 17:24:10 +0900
 * helper/helper-candwin-gtk.c (caret_state_hide) : New.
 (str_parse) : Handle "hide_caret_state" message.
 * xim/ximserver.cpp (XimServer::customContext) : Check
   "bridge-show-input-state?".
 * xim/convdisp.cpp (ConvdispOv::update_icxatr) : Ditto.
 * xim/canddisp.cpp (Canddisp::hide_caret_state) : New.
 * xim/canddisp.h (class Canddisp) : Add hide_caret_state().
 
 r2789@t42 (orig r1138):  yamamoto | 2005-08-06 18:26:59 +0900
  escseq.c (put_save_cursor, put_restore_cursor): reset attribute mode
 
 r2790@t42 (orig r1139):  ekato | 2005-08-06 21:14:48 +0900
 * xim/convdisp.cpp (ConvdispOv::update_icxatr) : Update caret
   state on focused context only.
 
 r2791@t42 (orig r1140):  ekato | 2005-08-06 21:41:13 +0900
 * xim/helper.cpp (helper_str_parse) : Hide caret state upon
   receiving "focus_in".
 * gtk/gtk-im-uim.c (im_uim_parse_helper_str) : Ditto.
 
 r2792@t42 (orig r1141):  ekato | 2005-08-06 22:17:13 +0900
 * gtk/gtk-im-uim.c (helper_str_parse) : Move code for hiding a
   caret state indicator into focus_out().
 (focus_out) : Hide caret state indicator here.
 
 r2793@t42 (orig r1142):  ekato | 2005-08-06 23:04:34 +0900
 * xim/convdisp.cpp (ConvdispOv::update_icxatr) : Invoke
   move_candwin() with proper timing.
 (ConvdispOv::update_caret_state) : Ditto.
 
 r2799@t42 (orig r1148):  yamamoto | 2005-08-07 15:02:03 +0900
  * fep/escseq.c (get_cursor_position) :
  parse cursor report by own routine instead of sscanf
 
 r2800@t42 (orig r1149):  yamamoto | 2005-08-07 16:41:44 +0900
  escseq.c (put_save_cursor, put_restore_cursor):
  revert the change of r1138
 
 r2801@t42 (orig r1150):  tkng | 2005-08-07 17:23:09 +0900
 * configure.ac: Version updated to 0.4.8.
 
 
 r2804@t42 (orig r1153):  tkng | 2005-08-07 19:10:01 +0900
 * uim/uim-helper-server.c:
  All 'serv_fd' are replaced with 'server_fd' for improvement of readability.
  -(init_server_fd): Renamed from init_serv_fd.
 
 r2805@t42 (orig r1154):  tkng | 2005-08-07 19:18:58 +0900
 * uim/uim-helper-server.c: This commit aims for refactoring.
  -(accept_new_connection): New function.
  -(uim_helper_server_process_connection): Replaced long acception code
   with accept_new_connection.