helper/eggtrayicon.c
@@ -35,6 +35,8 @@ static void egg_tray_icon_unrealize (GtkWidget *widget);
 
 static void egg_tray_icon_update_manager_window (EggTrayIcon *icon);
 
+EggTrayIcon *egg_tray_icon_new_for_xscreen (Screen *xscreen, const char *name);
+
 GType
 egg_tray_icon_get_type (void)
 {
