xim/ximserver.cpp
@@ -153,6 +153,13 @@ void XimServer::customContext(const char *custom, const char *val) {
     if (!strcmp(custom, "uim-xim-xft-font-name"))
 	update_default_xftfont();
 #endif
+
+    if (!strcmp(custom, "bridge-show-input-state?") &&
+		    !uim_scm_symbol_value_bool("bridge-show-input-state?")) {
+	    Canddisp *disp = canddisp_singleton();
+	    disp->hide_caret_state();
+    }
+
 }
 
 bool
@@ -675,6 +682,7 @@ void InputContext::candidate_update()
 
     disp->activate(active_candidates, mDisplayLimit);
     disp->select(current_cand_selection);
+    disp->show();
 }
 
 void InputContext::candidate_select(int index)
@@ -753,8 +761,9 @@ void InputContext::update_prop_label(const char *str)
     free(buf);
     
     if (show_caret_state == UIM_TRUE) {
+	int timeout = uim_scm_symbol_value_int("bridge-show-input-state-time-length");
 	Canddisp *disp = canddisp_singleton();
-	disp->show_caret_state(str);
+	disp->show_caret_state(str, timeout);
     }
 }
 
